✨ feat(app): création de l'application Pokédex avec vue grille et détails
- Configuration des interfaces TypeScript pour la PokeAPI (listes, détails, espèces, évolutions)
- Création du service API avec requêtes fetch typées strictes
- Ajout de la page d'accueil avec grille de cartes et couleurs dynamiques selon les types
- Implémentation de la pagination via le bouton \'Voir plus\'
- Création de la page de détails (pokemon.html) et configuration multi-pages de Vite
- Ajout du fil d'Ariane et de la navigation Précédent/Suivant sur la fiche détaillée
- Intégration des barres de statistiques avec code couleur conditionnel

--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "format": "prettier --write .",
-    "lint": "eslint . --fix"
+    "format": "oxfmt",
+    "format:check": "oxfmt --check",
+    "lint": "oxlint",
+    "lint:fix": "oxlint --fix"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
@@ -17,6 +19,7 @@
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.5",
+    "oxlint": "^1.48.0",
     "prettier": "^3.8.1",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.53.1",
